RESOLVED FIXED96911
Web Inspector: NMI don't double count fields of StaticDOMDataStore
https://bugs.webkit.org/show_bug.cgi?id=96911
Summary Web Inspector: NMI don't double count fields of StaticDOMDataStore
Yury Semikhatsky
Reported 2012-09-17 05:42:32 PDT
DOMDataStore::reportMemoryUsage adds all referenced maps byPointers but in case of StaticDOMDataStore the maps are actually fields of StaticDOMDataStore and shouldn't be counted separately.
Attachments
Patch (6.33 KB, patch)
2012-09-17 05:45 PDT, Yury Semikhatsky
no flags
Patch (5.41 KB, patch)
2012-09-17 06:20 PDT, Yury Semikhatsky
no flags
Patch (5.51 KB, patch)
2012-09-17 06:28 PDT, Yury Semikhatsky
apavlov: review+
Yury Semikhatsky
Comment 1 2012-09-17 05:45:01 PDT
Yury Semikhatsky
Comment 2 2012-09-17 06:20:39 PDT
Ilya Tikhonovsky
Comment 3 2012-09-17 06:24:20 PDT
Comment on attachment 164379 [details] Patch lgtm
Ilya Tikhonovsky
Comment 4 2012-09-17 06:25:42 PDT
Comment on attachment 164379 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=164379&action=review > Source/WebCore/bindings/v8/ScopedDOMDataStore.cpp:58 > + info.addInstrumentedMember(m_domNodeMap); please call base class instrumentation > Source/WebCore/bindings/v8/StaticDOMDataStore.cpp:59 > + MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::Binding); please call base class instrumentation
Yury Semikhatsky
Comment 5 2012-09-17 06:28:35 PDT
Yury Semikhatsky
Comment 6 2012-09-17 06:28:58 PDT
(In reply to comment #4) > (From update of attachment 164379 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=164379&action=review > > > Source/WebCore/bindings/v8/ScopedDOMDataStore.cpp:58 > > + info.addInstrumentedMember(m_domNodeMap); > > please call base class instrumentation > Done. > > Source/WebCore/bindings/v8/StaticDOMDataStore.cpp:59 > > + MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::Binding); > > please call base class instrumentation Done.
Alexander Pavlov (apavlov)
Comment 7 2012-09-17 06:30:52 PDT
Comment on attachment 164379 [details] Patch rs=me
Yury Semikhatsky
Comment 8 2012-09-17 06:32:55 PDT
Note You need to log in before you can comment on or make changes to this bug.