Web Inspector: NMI don't double count fields of StaticDOMDataStore https://bugs.webkit.org/show_bug.cgi?id=96911

Reviewed by Alexander Pavlov.

Provided two separate memory usage reporting routines for static and
scoped DOM data stores.

* bindings/v8/DOMDataStore.cpp:
* bindings/v8/DOMDataStore.h:
(DOMDataStore):
* bindings/v8/ScopedDOMDataStore.cpp:
(WebCore::ScopedDOMDataStore::reportMemoryUsage):
(WebCore):
* bindings/v8/ScopedDOMDataStore.h:
(ScopedDOMDataStore):
* bindings/v8/StaticDOMDataStore.cpp:
(WebCore::StaticDOMDataStore::reportMemoryUsage):
(WebCore):
* bindings/v8/StaticDOMDataStore.h:
(StaticDOMDataStore):

Canonical link: https://commits.webkit.org/114826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128752 268f45cc-cd09-0410-ab3c-d52691b4dbfc